@@ -1,5 +1,6 @@
 var path = require("path"),
-    fs = require("fs");
+    fs = require("fs"),
+    markdown = require("markdown");
 
 var manual = {};
 manual.Chapter = Chapter;
@@ -47,6 +48,19 @@ Chapter.prototype.__defineGetter__("text", function () {
     }
 
     return this._text;
+});
+
+Chapter.prototype.__defineGetter__("html", function () {
+    if (!this._html) {
+        var html = markdown.parse(this.text);
+
+        // Repair broken links whose href ends with a ")" (markdown parsing error)
+        html = html.replace(/(<a.*?href=".*?)\)(".*?>.*?<\/a>)/g, "$1$2)");
+
+        this._html = html;
+    }
+
+    return this._html;
 });
 
 function processChapter(chapter) {
